derive/tests/ui/attr-missing-rpc-name.stderr
error: rpc attribute should have a name e.g. `name = "method_name"`
 --> $DIR/attr-missing-rpc-name.rs:5:2
  |
5 |       /// Returns a protocol version
  |  _____^
6 | |     #[rpc]
7 | |     fn protocol_version(&self) -> Result<String>;
  | |_________________________________________________^
